[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/Scenes/HPBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Assets/Chick-Boy_Full_Pack/Chick-Boy Full Pack/ChikBoy_idle.png" type="Texture" id=2]
[ext_resource path="res://UI/Assets/Fonts/hf-free-complete/equipment-pro-v1.1/EquipmentPro.otf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Scripts/CharacterSlot.gd" type="Script" id=4]
[ext_resource path="res://UI/Assets/Fonts/hf-free-complete/compass-pro-v1.1/CompassPro.otf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.203922, 0.619608, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.0117647, 0.603922, 0, 0.305882 )
shadow_size = 2

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 2.401, 0.749, 25, 25 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
/fonts/Name = SubResource( 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 3.243, 0.657, 23, 18 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.784314 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 5 )

[node name="CharacterSlot" type="Control" groups=["gui_char_slot"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -824.0
margin_bottom = -520.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 251.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="CharacterPicture" type="TextureRect" parent="Panel"]
margin_left = -6.25304
margin_top = 4.0
margin_right = 67.747
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar" parent="." instance=ExtResource( 1 )]
margin_left = 70.0
margin_top = 35.0
margin_right = 270.0
margin_bottom = 61.0
rect_scale = Vector2( 0.85, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="."]
margin_left = 70.0
margin_top = 6.01041
margin_right = 153.0
margin_bottom = 41.0104
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme = SubResource( 6 )
text = "Player (You)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Control" parent="."]
margin_left = 71.0
margin_top = 49.0
margin_right = 144.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stock1" type="Control" parent="Lives"]
margin_left = -6.0
margin_top = -9.0
margin_right = 14.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Lives/Stock1"]
margin_top = 10.0
margin_right = 36.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 35 )
rect_scale = Vector2( 0.5, 0.5 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stock2" type="Control" parent="Lives"]
margin_left = -6.0
margin_top = -9.0
margin_right = 27.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Lives/Stock2"]
margin_left = 25.9859
margin_top = 10.7875
margin_right = 85.9859
margin_bottom = 50.7875
rect_min_size = Vector2( 60, 35 )
rect_scale = Vector2( 0.5, 0.5 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stock3" type="Control" parent="Lives"]
margin_left = 22.348
margin_top = -9.0
margin_right = 92.348
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Lives/Stock3"]
margin_left = 22.9935
margin_top = 10.9449
margin_right = 82.9935
margin_bottom = 50.9449
rect_min_size = Vector2( 60, 35 )
rect_scale = Vector2( 0.5, 0.5 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedPanel" type="Panel" parent="."]
margin_top = 84.0
margin_right = 251.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipped" type="Control" parent="EquippedPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="EquippedPanel/Equipped"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -12.0
margin_right = -12.0
margin_bottom = 12.0
rect_min_size = Vector2( 20, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotionSprite" type="TextureRect" parent="EquippedPanel/Equipped/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EquippedPanel"]
margin_left = 4.82088
margin_top = 2.64533
margin_right = 159.821
margin_bottom = 25.6453
custom_fonts/font = SubResource( 8 )
text = "Nothing equipped"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
